# mcp-vscode-workflow

./: .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Makefile  README.md  github-issue-fix-ci.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-merge.yml  branch-protection.yml  ci.yml
.mcp/: config-bash.json  config-cicd.json  config-docs.json  config-infra.json  config-python.json  mcp.json  roles.json
.mcp/prompts/: bash-specialist.md  bug-analysis.md  cicd-specialist.md  code-review.md  data-modeler.md  docs-specialist.md  documentation.md  infra-specialist.md  product-manager.md  python-specialist.md  release-manager.md  security-analyst.md  senior-architect.md  senior-engineer.md  senior-test-engineer.md  ux-reviewer.md
docs/: acceptance-criteria-summary.md  acceptance-criteria.md  auto-merge-test.md  ci-cd-setup.md  configuration.md  getting-started.md  mcp-servers.md  profiles.md  roles.md  setup.md  voice-commands.md
scripts/: bootstrap.sh  check-tools.sh  debug-auto-merge.sh  install-mcp-npx.sh  start-bash-profile.sh  start-cicd-profile.sh  start-docs-profile.sh  start-infra-profile.sh  start-python-profile.sh
tests/: __init__.py  test_bootstrap_autodetect.py  test_bootstrap_quick.py  test_project.py
